# cpp-homeworks-2018

./: README.md
homework_1/: README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: guessing_game  guessing_game.cpp
homework_2/: README.md
homework_2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
homework_2/igg_image/tests/: CMakeLists.txt  test_image.cpp
homework_3/: README.md
homework_3/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
homework_3/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp
homework_3/igg_image/tests/: CMakeLists.txt  test_dummy_strategy.cpp  test_from_png.cpp  test_from_ppm.cpp  test_init.cpp  test_resize.cpp
homework_4/: README.md
homework_4/digit_counter/: CMakeLists.txt
homework_4/digit_counter/src/: digit_counting.cpp  digit_counting.h
homework_4/digit_counter/tests/: CMakeLists.txt  test_digit_counting.cpp
homework_4/igg_image/: CMakeLists.txt
homework_4/igg_image/src/igg_image/: image.cpp  image.h
homework_4/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.h
homework_4/igg_image/tests/: CMakeLists.txt  test_dummy_strategy.cpp  test_from_png.cpp  test_from_ppm.cpp  test_init.cpp
homework_4/stack_limit/: stack_limit.cpp
